# MCaml

./: .gitignore  CLAUDE.md  DYNMEM_PLAN.md  README.md  TODO.md  alpha.ml  ast.ml  cfg.ml  cfg_build.ml  closure_layout.ml  closure_spec.ml  codegen.ml  codegen_cfg.ml  codegen_helpers.ml  const_fold.ml  copy_prop.ml  cost.ml  dce.ml  dominators.ml  dune  dune-project  for_lift.ml  inline.ml  knormal.ml  lexer.ml  lexer.mll  licm.ml  liveness.ml  local_cse.ml  loop_detect.ml  main.ml  mcaml.opam  monomorphize.ml  optimize.ml  parser.ml  parser.mli  parser.mly  regalloc_cfg.ml  setup.sh  sroa.ml  (+11 more)
dev_trace/: dune  tracer.ml
lib/: math.mcaml
scripts/: debug_fib.mcaml  graph_algos.mcaml  graph_world.mcaml  mc_test_suite.mcaml  mc_test_suite_phase_d.mcaml  mc_test_suite_phase_e.mcaml  minecraft_demo.mcaml  multirun_guard.mcaml  primitives_v1.mcaml  stress_nested_if.mcaml  stress_test.mcaml  stress_test_2.mcaml  test_all.mcaml  test_cons.mcaml  test_dyn_array.mcaml  test_dyn_array_params.mcaml  test_fib_tco.mcaml  test_fixed_point.mcaml  test_full.mcaml  test_globals.mcaml  test_list_match.mcaml  test_mod.mcaml  test_nested_ref.mcaml  test_param_types.mcaml  test_partial_app.mcaml  test_tco.mcaml  test_tick_for.mcaml  test_tick_stress.mcaml  test_tuples_records.mcaml  test_unroll.mcaml
scripts/demos/: demo_classifier.mcaml  feature_tour.mcaml  graph_algos.mcaml  walkthrough.mcaml
scripts/tests/: debug_ret.mcaml  mc_test_suite_phase_d.mcaml  mc_test_suite_phase_e.mcaml  regression_optimizer_closures.mcaml  test_adts.mcaml  test_arr_set.mcaml  test_array_arg.mcaml  test_closure_flow.mcaml  test_core.mcaml  test_dyn_array.mcaml  test_fail.mcaml  test_fib.mcaml  test_fixed_point.mcaml  test_for.mcaml  test_globals.mcaml  (+7 more)
sim/: sim.py
src/: alpha.ml  alpha.mli  ast.ml  ast.mli  cfg.ml  cfg.mli  cfg_build.ml  cfg_build.mli  closure_layout.ml  closure_layout.mli  closure_spec.ml  closure_spec.mli  codegen.ml  codegen.mli  codegen_cfg.ml  codegen_cfg.mli  codegen_helpers.ml  codegen_helpers.mli  const_fold.ml  const_fold.mli  copy_prop.ml  copy_prop.mli  cost.ml  cost.mli  dce.mli  deadval.ml  deadval.mli  dominators.mli  dune  for_lift.ml  for_lift.mli  inline.ml  inline.mli  knormal.ml  knormal.mli  lexer.mli  licm.mli  liveness.ml  liveness.mli  local_cse.ml  (+38 more)
test/: cfg_fixtures.ml  dune  test_codegen_cfg.ml  test_codegen_helpers.ml  test_const_fold.ml  test_deadval.ml  test_dominators.ml  test_liveness.ml  test_mcaml.ml  test_parser_g4b.ml  test_partial_app.ml  test_source_include.ml
tools/: MANUAL_TEST.md  MC_TEST_SUITE.md  README.md  gen_graph_viz.py  gen_math_lut.py  pack_datapack.py  sim_check_closure_flow.py  sim_check_graph.py  sim_check_multirun.py  sim_check_nested_ref.py  sim_check_partial_app.py  sim_check_phase_d.py  sim_check_phase_e.py  sim_check_regression.py  sim_check_stress.py  sim_check_stress2.py  sim_check_suite.py  verify_canary.py
(+4 files in other folders)
