; Builds every .ml in the repo root into the mcaml compiler executable.
; lexer.ml / parser.ml / parser.mli are the checked-in ocamllex/menhir
; output and are compiled as plain modules — regenerate them manually
; (ocamllex lexer.mll; menhir parser.mly) when the .mll/.mly change.
; (flags (-g)) deliberately drops dune's :standard dev-profile warning
; set so warnings match a plain ocamlc build (non-fatal defaults).
(executable
 (name main)
 (flags (-g)))
